--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://via.placeholder.com/150" alt="عکس من" />
+    <img src="profile.jpg" alt="عکس من" />
     <h1>درود! من علی هستم</h1>
-    <p>دانشجوی رشته صنایع و علاقه‌مند به یادگیری وب</p>
+      <p>دانش آموخته رشته ی مهندسی صنایع و کارشناس ارشد برنامه ریزی</p>
 
     <h2>مهارت‌ها</h2>
     <div class="skills">
       <span class="skill">HTML</span>
       <span class="skill">CSS</span>
-      <span class="skill">حل مسئله</span>
+      <span class="skill"> حل مسئله و آفیس</span>
     </div>
 
     <h2>تماس</h2>
     <p>ایمیل: <a href="mailto:alijahangardii@gmail.com">alijahangardii@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/yourname" target="_blank">github.com/yourname</a></p>
+    <p>GitHub: <a href="https://github.com/yourname" target="_blank">github.com/ali_jahangardi</a></p>
   </div>
 </body>
 </html>
