--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="card">
     <img src="https://via.placeholder.com/150" alt="عکس من" class="card-img" />
     <h2 class="card-title">علی جهانگردی</h2>
-    <p class="card-desc">دانش آموخته رشته ی مهندسی صنایع و کارشناس ارشد برنامه ریزی</p>
+    <p class="card-desc">دانش آموخته رشته ی مهندسی صنایع و کارشناس ارشد برنامه ریزی | علاقه‌مند به وب</p>
     <a href="https://alijahangardi.ir" target="_blank" class="card-btn">مشاهده سایت</a>
   </div>
 </body>
