--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section class="section">
       <h2>تماس</h2>
-      <p>ایمیل: <a href="mailto:alijahangardi@example.com">alijahangardi@example.com</a></p>
+      <p>ایمیل: <a href="mailto:alijahangardi@example.com">alijahangardi@gmail.com</a></p>
     
     </section>
   </div>
